[package]
name = "bubblegum"
version = "0.12.0"

[package.metadata.solana]
program-id = "BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY"
program-dependencies = [
    "BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY",
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK",
    "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
]
