[package]
name = "token_metadata"
version = "1.14.0"

[package.metadata.solana]
program-id = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
program-dependencies = [
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "auth9SigNpDKz4sJJ1DfCTuZrZNSAgh9sFD3rboVmgg",
    "SysExL2WDyJi9aRZrXorrjHJut3JwHQ7R9bTyctbNNG",
    "TokExjvjJmhKaRBShsBAsbSvEWMA1AgUNK7ps4SAc2p",
    "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
]
